# MKDocs

./: .desktopConfig.js  .desktopConfig.json  .editorconfig  .eslintrc.json  .flake8  .gitattributes  .gitignore  .htaccess  .htmlhintrc  .lighthouserc.js  .lighthouserc.json  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlint.jsonc  .markdownlintignore  .nginx-csp.conf  .npmignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.json  .puppeteerScript.js  .releaserc.json  .stylelintrc.cjs  .stylelintrc.json  .versionrc.json  404.html  BADGES.md  CHANGELOG.md  CHANGELOG_FIXES.md  CODE_OF_CONDUCT.md  COMMITS.md  CONTRIBUTING.md  DOTFILES.md  INSTALL.md  LICENSE.md  LINTS.md  Makefile  ONBOARDING.md  PATCH_NOTES.txt  (+24 more)
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml  milestones.yml  project-board.yml
.github/DISCUSSION_TEMPLATE/: ideas.md  q_and_a.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codeql/: codeql-config.yml
.github/scripts/: format-lighthouse.cjs  format-lighthouse.js  generate_csp.py
.github/workflows/: auto-label.yml  badge-cron.yml  browserlist.yml  ci-all.yml  ci.yml  codeql-analysis.yml  codeql.yml  commitlint.yml  dependabot-auto-merge.yml  dependabot-label.yml  deploy-docs.yml  dotfiles-lint.yml  label-sync.yml  lighthouse.yml  lint-aggregate.yml  lint.yml  maintenance.yml  markdown-lint-report.yml  mkdocs.yml  pages-status.yml  pages.yml  pr-labeler.yml  python-lint-report.yml  readme-toc.yml  release-please.yml  release.yml  require-label.yml  security-scan.yml  security.yml  stale.yml  summary.yml  yaml-json-lint-report.yml
about/contact/: index.html
about/imprint/: index.html
about/privacy/: index.html
about/terms/: index.html
assets/javascripts/: bundle.92b07e13.min.js  bundle.f55a23d4.min.js
assets/stylesheets/: extra.css  main.202509142335.css
docs/: 404.md  index.md  site.webmanifest
docs/.well-known/: assetlinks.json  gpc.json
docs/about/: accessibility.md  contact.md  imprint.md  (+2 more)
lighthouse-report/: manifest.json
overrides/: extra.css  main.html
search/: search_index.json
snippets/: alt-examples.md  aria-dialog.html  aria-progressbar.html  heading-guidelines.md  nginx-cache.conf
tests/: test_dummy.py
tools/: README.md  Setup-MKDocs.ps1  Update-Path.ps1  a11y-audit.sh  a11y-scan.sh  a11y_fix.py  build.ps1  clean.ps1  fix-tabs.sh  generate-screenshots.js  generate-screenshots.py  pathctl-ubuntu.sh  setup-mkdocs-freebsd.sh  setup-mkdocs-ubuntu.sh  setup-mkdocs.sh  setup_github_config.sh  tag-release.sh  update-badges.sh  update-path-freebsd.sh  update-path-ubuntu.sh  update_server_headers.py
(+109 files in other folders)
