[project]
name = "mkdocs-magenta"
version = "1.0.0"

[tool.pytest.ini_options]
addopts = "-ra -q --disable-warnings --maxfail=1"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
branch = true
source = ["docs", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
