[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-site"
version = "1.0.0"
description = "Documentation site built with MkDocs and Material theme"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mkdocs==1.6.1",
    "mkdocs-material[imaging]==9.6.19",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-git-revision-date-localized-plugin==1.4.7",
    "mkdocs-git-committers-plugin-2==2.5.0",
    "mkdocs-git-authors-plugin==0.10.0",
    "mkdocs-redirects==1.2.2",
    "mkdocs-htmlproofer-plugin==1.3.0",
    "mkdocs-static-i18n==1.3.0",
    "beautifulsoup4==4.13.5",
    "cairosvg==2.8.2",
    "cairocffi==1.7.1",
    "cffi==2.0.0",
    "tinycss2==1.4.0",
    "cssselect2==0.8.0",
    "pillow==11.3.0",
    "pip-audit==2.9.0",
    "bandit==1.8.6"
]

[tool.bandit]
exclude_dirs = ["tests", "site"]
skips = ["B101"]

[tool.pip-audit]
ignore-vulns = []
