[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-site"
version = "1.0.0"
description = "Documentation site built with MkDocs and Material theme"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mkdocs",
    "mkdocs-material[imaging]",
    "mkdocs-material-extensions",
    "mkdocs-minify-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-git-committers-plugin-2",
    "mkdocs-git-authors-plugin",
    "mkdocs-redirects",
    "mkdocs-htmlproofer-plugin",
    "mkdocs-static-i18n",
    "beautifulsoup4",
    "cairosvg",
    "cairocffi",
    "cffi",
    "tinycss2",
    "cssselect2",
    "pillow",
    "pip-audit",
    "bandit",

    # Requirements for core
    "jinja2",
    "markdown",
    "pygments",
    "pymdown-extensions",

    # Requirements for plugins
    "babel",
    "colorama",
    "paginate",
    "backrefs",
    "requests",

    # Temporarily pin click until this is resolved in MkDocs, see
    # https://github.com/mkdocs/mkdocs/issues/4014#issuecomment-3146508306
    "click",
]

[tool.bandit]
exclude_dirs = ["tests", "site"]
skips = ["B101"]

[tool.pip-audit]
ignore-vulns = []
